--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,8 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  margin: 0 auto;
+  width: 50vw;
   min-height: 100vh;
 }
 
